--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
     <title>Corsas Foda</title>
 </head>
 <body> 
+
+    <i class="bi bi-list menu-mobile"></i>
+
     <aside id="header">
         <section class="profile">
             <img src="../static/img/eu.png" alt="corsa brabo">
