--- a/static/style.css
+++ b/static/style.css
@@ -20,9 +20,11 @@ html,body{
 }
 
 #header .profile img{
+    box-sizing: border-box;
     margin: 15px auto;
     display: block;
     width: 120px;
+    height: 120px;
     border: 2px solid #404040;
     border-radius: 50%;
 }
@@ -38,17 +40,17 @@ html,body{
 
 #header .profile .social-links a{
     font-size: 1rem;
-    background: #404040;
-    color: #fff;
+    /*background: #404040;*/
+    color: #40404054;
     padding: 0.6rem;
     margin-right: 1rem;
-    border-radius: 50%;
+    border-radius: 1rem;
     transition: 0.3s;
     text-decoration: none;
 }
 
 #header .profile .social-links a:hover{
- background: #A62F03;
+ color: #A62F03;
 }
 
 .nav-menu{
@@ -83,7 +85,7 @@ html,body{
     margin-left: 300px;}
 
 section#inicio{
-    background-image: url("./img/corsa-branco-01.jpg");
+    background-image: url("./img/rolamento.JPG");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -102,13 +104,15 @@ section#inicio span#subtitle{
     font-size: 1.5rem;
 }
 
-section#inicio div#arraste{
+section#inicio a#arraste{
     width: 9rem;
-}
-
-section#inicio div#arraste a{
     text-decoration: none;
     color: #404040;
+    transition: 0.4s;
+}
+
+section#inicio a#arraste:hover{    
+    color: #A62F03;
 }
 
 .text-shadow{
@@ -117,8 +121,8 @@ section#inicio div#arraste a{
 
 i.menu-mobile{
     position: fixed;
-    color: #404040;
-    background-color: #A6A6A6;
+    color: #0D0D0D;
+    background-color: #a6a6a63a;
     right: 1rem;
     top: 1rem;
     font-size: 1.5rem;
@@ -139,6 +143,14 @@ i.menu-mobile{
     left: 0;
 }
 
+.sans {
+    font-family: sans-serif;
+    font-weight: lighter;
+}
+.section-bg{
+    background-color: #A6A6A6;
+}
+
 @media (max-width: 1024px){
     #header{
         left: -300px;
@@ -156,4 +168,18 @@ i.menu-mobile{
     #main{
         margin-left: 0px;
     }
+}
+
+*::-webkit-scrollbar{
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track{
+    width: 12px;
+    box-shadow: inset 0 0 .3rem transparent;
+    background-color: #fff;
+}
+
+*::-webkit-scrollbar-thumb{
+    background-color: #A62F03;    
 }
