--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="icon" type="image/png" href="../static/img/ic_launcher_foreground.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <title>Corsas Foda</title>
+    <title>Portfólio Brabo</title>
 </head>
 <body> 
 
@@ -19,31 +19,31 @@
             <img src="../static/img/eu.png" alt="corsa brabo">
             <h1>Izael Gs</h1>
             <div class="social-links mt-4 text-center">
-                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="" target="_blank"><i class="bi bi-github"></i></a>                
-                <a href="" target="_blank"><i class="bi bi-instagram"></i></a>
-                <a href="" target="_blank"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/izael-gon%C3%A7alves-da-silva-248129145/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/izaelgs" target="_blank"><i class="bi bi-github"></i></a>                
+                <a href="https://www.instagram.com/izael_hs/" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://twitter.com/Izael65" target="_blank"><i class="bi bi-twitter"></i></a>
             </div>
         </section>
         <nav id="navbar" class="nav-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house"></i> Homer</a>
+                  <a class="nav-link active" aria-current="page" href="#inicio"><i class="bi bi-house"></i> Homer</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bi bi-person"></i> Sobre</a>
+                  <a class="nav-link" href="#sobre"><i class="bi bi-person"></i> Sobre</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="bi bi-list-check"></i> Habilidades</a>
+                  <a class="nav-link" href="#habilidades"><i class="bi bi-list-check"></i> Habilidades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-file-earmark"> </i>Currículo</a>
+                    <a class="nav-link" href="#cu"><i class="bi bi-file-earmark"> </i>Currículo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-collection"> </i>Portfólio</a>
+                    <a class="nav-link" href="#porta"><i class="bi bi-collection"> </i>Portfólio</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-envelope"> </i>Contato</a>
+                    <a class="nav-link" href="#contato"><i class="bi bi-envelope"> </i>Contato</a>
                   </li>                                   
               </ul>
         </nav>
@@ -56,10 +56,94 @@
                 <span id="subtitle" class="text-white text-shadow">Vagabundo</span>
             </div>
             <div class="col-md-7 d-flex justify-content-end align-items-end">
-                <div id="arraste" class="d-flex align-items-center">
-                    <i class="bi bi-arrow-down text-black pe-2 fs-2" aria-hidden="true"></i>
-                    <a href="">Saiba Mais</a>
-                </div>                
+                <a href="#sobre" id="arraste" class="d-flex align-items-center">
+                    <i class="bi bi-arrow-down pe-2 fs-2" aria-hidden="true"></i>
+                    <div>Saiba Mais</div>
+                </a>                
+            </div>
+        </section>
+        <section id="sobre" class="container mt-5">
+            <div class="row w-100">
+                <div class="col-md-12">
+                    <h2 class="pt-3">Sobre</h2>
+                    <p>só durmo, faço nada o dia todo, num sei fazer um pavê decente, tenho carteira mas n sei dirigir, ninguem mim gosta,
+                        meu pé é feio, meu pc é rui, desde 8 anos num sei toca o solo de sweet child o mine sem suja as nota tudo, num saio
+                        do ouro 3 no cs, meus código são tudo feio bagunçado nunca funciona, o criador do ableton deve ter vergonha de mim 
+                        por fazer umas produção tão feia, nem instalo editor de video mais, desisto. sou mt feio, minhas torta de pessego é 
+                        mt rui, etc... </p>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <img class="img-fluid shadow" src="../static/img/eu.png" alt="imagem foda minha">
+                </div>
+                <div class="col-md-8">
+                    <h3>Fracassos</h3>
+                    <p>em toda minha vida foram acumulados incontáveis fracassos de forma que seria inviável lista-los aqui, portanto,
+                        segue abaixo elementos aleatórios sobre mim
+                    </p>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="list-group list-group-flush fw-bold">
+                                <li class="list-group-item">
+                                    Sexo: <span class="sans">Sim</span>
+                                </li>
+                                <li class="list-group-item">Hobby: 
+                                    <span class="sans">Levantamento de Pixel</span></li>
+                                <li class="list-group-item">Signo: 
+                                    <span class="sans">Material de Construção</span></li>                                                               
+                              </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="list-group list-group-flush fw-bold">
+                                <li class="list-group-item">Idade: 
+                                    <span class="sans">Solteiro</span></li>
+                                <li class="list-group-item">Comida Preferida: 
+                                    <span class="sans">Peperonni</span></li>
+                                <li class="list-group-item">Profissão: 
+                                    <span class="sans">Mestre no Free Fire</span></li>                                                               
+                              </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="habilidades" class="mt-5 section-bg">
+            <div class="container pb-5">
+                <h2 class="pt-5">Habilidades</h2>
+                <p>Lorem Ipsum é mt bão, Curabitur volutpat neque eget ultricies hendrerit. esse site é bom demais 
+                    Nunc eu ultricies lorem. Suspendisse placerat nibh ut tellus tempor pharetra. Nullam vehicula pretium nunc seriao q site bao da conta</p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">HTML, CSS, JS</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                          </div>
+                        <p class="mt-3 mb-0">Java</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark"" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+                        </div>
+                        <p class="mt-3 mb-0">PHP</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark"" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">SQL</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark"" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Spring Boot</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark"" role="progressbar" style="width: 45%;" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">45%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Bootstrap</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark"" role="progressbar" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
